# MKV-Cleaner

./: .flake8  .gitignore  MANIFEST.in  README.md  build_exe.py  mkv-cleaner.spec  mkv_cleaner.py  pyproject.toml
.github/workflows/: auto-merge.yml  lint.yml  package-windows.yml  package.yml  release.yml
core/: __init__.py  bootstrap.py  config.py  flags.py  tracks.py  worker.py
gui/: __init__.py  actions_logic.py  dialogs.py  group_logic.py  main_window.py  models.py  processing.py  settings_logic.py  shortcut_logic.py  subtitle_preview.py  table_logic.py  theme.py
gui/widgets/: action_bar.py  fade_disabled.py  fast_tooltip_style.py  file_list.py  flag_delegate.py  group_bar.py  keep_toggle_delegate.py  logo_splash.py  no_focus_delegate.py  track_table.py
tests/: conftest.py  test_actions_logic.py  test_bootstrap.py  test_config.py  test_flags.py  test_group_logic.py  test_keep_toggle_delegate.py  test_model.py  test_processing.py  test_run_command.py  test_subtitle_preview.py  test_table_logic.py  test_tracks.py
