[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mkv-cleaner"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pyside6"]

[project.scripts]
mkv-cleaner = "mkv_cleaner:main"

[tool.setuptools]
py-modules = ["mkv_cleaner"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core", "gui"]
exclude = ["out"]
