[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mkv-cleaner"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pyside6",
    "tomli; python_version < \"3.11\"",
]

[project.optional-dependencies]
build = ["pyinstaller"]

[project.scripts]
mkv-cleaner = "mkv_cleaner:main"

[tool.setuptools]
py-modules = ["mkv_cleaner"]

[tool.setuptools.data-files]
"fonts" = ["fonts/*"]
"" = ["MKV-Cleaner_logo.png"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core", "gui"]
exclude = ["out"]
